# djangix

./: README.md  pyproject.toml  setup.py  tox.ini
djangix/: apps.py
djangix/contrib/admin/: __init__.py  options.py
djangix/contrib/auth/: utils.py
djangix/contrlib/admin/: __init__.py  options.py
djangix/contrlib/auth/: __init__.py
djangix/db/: __init__.py
djangix/db/fields/: __init__.py  base_app.py  currency.py  readable_json.py  sanitized_json.py  truncate.py
djangix/db/filters/: __init__.py  pg_ilike.py
djangix/db/mixins/: __init__.py  mapping.py  timestamp.py  update_if_change.py
djangix/db/models/: __init__.py  base_app.py  choices.py
djangix/forms/fields/: __init__.py  currency.py  readable_json.py
djangix/middleware/: __init__.py  client_ip.py
djangix/utils/: __init__.py  datetime.py  decorators.py  dict.py  geo.py  numbers.py  strings.py  threading.py
djangix/utils/redis/: __init__.py  rate_limiter.py  semaphore.py
tests/: django_test_settings.py  test_utils_geo.py
